ran overnight experiments

--- a/tr-EFM neural network jupyter.ipynb
+++ b/tr-EFM neural network jupyter.ipynb
@@ -1634,10 +1634,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5500/5500 [==============================] - 16s 3ms/step\n",
+      "model scored 90.90899999999999% on D:/jake/DDHO Data/displacement/2018_09_18/tip2/0noise/*.npy\n",
+      "one_diff_error = 9.09\n",
+      "two_diff_error = 0.0\n",
+      "three_diff_error = 0.0\n",
+      "which taus failed were: [500.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.]\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "test.test_simulated_CNN(\"D:/jake/DDHO Data/displacement/2018_09_18/tip2/0noise/*.npy\")"
+   ]
   },
   {
    "cell_type": "code",
