--- a/tr-EFM neural network jupyter.ipynb
+++ b/tr-EFM neural network jupyter.ipynb
@@ -908,15 +908,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 20900 samples, validate on 1100 samples\n",
-      "Epoch 1/2\n"
+      "Train on 41800 samples, validate on 2200 samples\n",
+      "Epoch 1/20\n",
+      " - 968s - loss: 1.1178 - acc: 0.5515 - top2metric: 0.7230 - top3metric: 0.8217 - val_loss: 0.6410 - val_acc: 0.7486 - val_top2metric: 0.9105 - val_top3metric: 0.9682\n",
+      "Epoch 2/20\n",
+      " - 965s - loss: 0.6385 - acc: 0.7368 - top2metric: 0.9036 - top3metric: 0.9684 - val_loss: 0.4162 - val_acc: 0.8368 - val_top2metric: 0.9609 - val_top3metric: 0.9909\n",
+      "Epoch 3/20\n",
+      " - 966s - loss: 0.5068 - acc: 0.7860 - top2metric: 0.9386 - top3metric: 0.9851 - val_loss: 0.4301 - val_acc: 0.8373 - val_top2metric: 0.9568 - val_top3metric: 0.9927\n",
+      "Epoch 4/20\n",
+      " - 966s - loss: 0.4423 - acc: 0.8138 - top2metric: 0.9543 - top3metric: 0.9911 - val_loss: 0.3494 - val_acc: 0.8527 - val_top2metric: 0.9677 - val_top3metric: 0.9968\n",
+      "Epoch 5/20\n",
+      " - 966s - loss: 0.4346 - acc: 0.8239 - top2metric: 0.9563 - top3metric: 0.9907 - val_loss: 0.3263 - val_acc: 0.8655 - val_top2metric: 0.9723 - val_top3metric: 0.9977\n",
+      "Epoch 6/20\n",
+      " - 966s - loss: 0.3806 - acc: 0.8447 - top2metric: 0.9661 - top3metric: 0.9942 - val_loss: 0.2770 - val_acc: 0.8914 - val_top2metric: 0.9859 - val_top3metric: 1.0000\n",
+      "Epoch 7/20\n",
+      " - 966s - loss: 0.3548 - acc: 0.8562 - top2metric: 0.9709 - top3metric: 0.9949 - val_loss: 0.2890 - val_acc: 0.8827 - val_top2metric: 0.9791 - val_top3metric: 0.9991\n",
+      "Epoch 8/20\n",
+      " - 903s - loss: 0.3353 - acc: 0.8656 - top2metric: 0.9728 - top3metric: 0.9954 - val_loss: 0.3143 - val_acc: 0.8682 - val_top2metric: 0.9777 - val_top3metric: 0.9964\n",
+      "Epoch 9/20\n",
+      " - 878s - loss: 0.3190 - acc: 0.8722 - top2metric: 0.9752 - top3metric: 0.9958 - val_loss: 0.2866 - val_acc: 0.8877 - val_top2metric: 0.9823 - val_top3metric: 0.9991\n",
+      "Epoch 10/20\n",
+      " - 878s - loss: 0.3086 - acc: 0.8783 - top2metric: 0.9787 - top3metric: 0.9970 - val_loss: 0.2610 - val_acc: 0.8905 - val_top2metric: 0.9868 - val_top3metric: 0.9991\n",
+      "Epoch 11/20\n",
+      " - 877s - loss: 0.2934 - acc: 0.8834 - top2metric: 0.9801 - top3metric: 0.9971 - val_loss: 0.3107 - val_acc: 0.8627 - val_top2metric: 0.9764 - val_top3metric: 0.9973\n",
+      "Epoch 12/20\n",
+      " - 877s - loss: 0.2775 - acc: 0.8911 - top2metric: 0.9805 - top3metric: 0.9971 - val_loss: 0.2749 - val_acc: 0.8845 - val_top2metric: 0.9845 - val_top3metric: 0.9991\n",
+      "Epoch 13/20\n",
+      " - 877s - loss: 0.3002 - acc: 0.8845 - top2metric: 0.9797 - top3metric: 0.9966 - val_loss: 0.2797 - val_acc: 0.8895 - val_top2metric: 0.9836 - val_top3metric: 0.9982\n",
+      "Epoch 14/20\n",
+      " - 877s - loss: 0.2686 - acc: 0.8957 - top2metric: 0.9816 - top3metric: 0.9974 - val_loss: 0.3073 - val_acc: 0.8791 - val_top2metric: 0.9773 - val_top3metric: 0.9982\n",
+      "Epoch 15/20\n",
+      " - 877s - loss: 0.2739 - acc: 0.8934 - top2metric: 0.9827 - top3metric: 0.9975 - val_loss: 0.2635 - val_acc: 0.8914 - val_top2metric: 0.9841 - val_top3metric: 0.9995\n",
+      "Epoch 16/20\n",
+      " - 877s - loss: 0.2541 - acc: 0.9021 - top2metric: 0.9842 - top3metric: 0.9978 - val_loss: 0.2916 - val_acc: 0.8805 - val_top2metric: 0.9795 - val_top3metric: 0.9986\n",
+      "Epoch 17/20\n",
+      " - 877s - loss: 0.2636 - acc: 0.8971 - top2metric: 0.9824 - top3metric: 0.9976 - val_loss: 0.4181 - val_acc: 0.8550 - val_top2metric: 0.9632 - val_top3metric: 0.9945\n",
+      "Epoch 18/20\n",
+      " - 877s - loss: 0.2721 - acc: 0.8971 - top2metric: 0.9814 - top3metric: 0.9966 - val_loss: 0.3385 - val_acc: 0.8814 - val_top2metric: 0.9836 - val_top3metric: 0.9991\n",
+      "Epoch 19/20\n",
+      " - 877s - loss: 0.2472 - acc: 0.9049 - top2metric: 0.9856 - top3metric: 0.9977 - val_loss: 0.2629 - val_acc: 0.8955 - val_top2metric: 0.9877 - val_top3metric: 0.9995\n",
+      "Epoch 20/20\n",
+      " - 878s - loss: 0.2468 - acc: 0.9089 - top2metric: 0.9853 - top3metric: 0.9976 - val_loss: 0.3227 - val_acc: 0.8886 - val_top2metric: 0.9868 - val_top3metric: 0.9982\n",
+      "22000/22000 [==============================] - 226s 10ms/step\n",
+      "model scored 92.745% on G:/2018_11_02 PLL on gold/tip8/mono/Run1\n",
+      "one_diff_error = 6.11\n",
+      "two_diff_error = 1.0999999999999999\n",
+      "three_diff_error = 0.02\n",
+      "which taus failed were: [  52.   48. 1089.  243.   84.    5.   59.    5.   11.    0.    0.]\n",
+      " \n",
+      "22000/22000 [==============================] - 223s 10ms/step\n",
+      "model scored 95.059% on G:/2018_11_02 PLL on gold/tip8/mono/Run2\n",
+      "one_diff_error = 2.3800000000000003\n",
+      "two_diff_error = 2.5\n",
+      "three_diff_error = 0.05\n",
+      "which taus failed were: [ 15. 126. 678.   8.  31. 138.  71.  17.   3.   0.   0.]\n",
+      " \n",
+      "22000/22000 [==============================] - 215s 10ms/step\n",
+      "model scored 65.191% on G:/2018_11_02 PLL on gold/tip8/mono/Run3\n",
+      "one_diff_error = 16.49\n",
+      "two_diff_error = 9.27\n",
+      "three_diff_error = 8.959999999999999\n",
+      "which taus failed were: [1.913e+03 2.000e+03 2.000e+03 8.900e+01 2.420e+02 1.560e+02 1.131e+03\n",
+      " 1.070e+02 1.800e+01 1.000e+00 1.000e+00]\n",
+      " \n"
      ]
     }
    ],
@@ -924,17 +985,176 @@
     "#load and prep training data\n",
     "test = CNN_train()\n",
     "\n",
-    "train_data = test.load_experimental_train_data(\"G:/2018_11_02 PLL on gold/tip8/mono/Run1\")\n",
+    "train_data = test.load_experimental_train_data(\"G:/2018_11_02 PLL on gold/tip8/mono/Run1\",\n",
+    "                                              \"G:/2018_11_02 PLL on gold/tip8/mono/Run2\")\n",
     "\n",
     "train_x1, train_y = test.preprocess_train_data(train_data)\n",
     "\n",
-    "model = test.train_CNN(train_x1,train_y, num_epochs = 2, kernel1_size = 400, kernel2_size = 100, num_filter1 = 5, num_filter2 = 3)\n",
+    "model = test.train_CNN(train_x1,train_y, num_epochs = 20, kernel1_size = 400, kernel2_size = 100, num_filter1 = 5, num_filter2 = 3)\n",
     "\n",
-    "test.test_experimental_CNN(\"G:/2018_11_02 PLL on gold/tip8/mono/Run1\")\n",
+    "test.test_experimental_CNN(\"G:/2018_11_02 PLL on gold/tip8/mono/Run1\",\n",
+    "                          \"G:/2018_11_02 PLL on gold/tip8/mono/Run2\",\n",
+    "                          \"G:/2018_11_02 PLL on gold/tip8/mono/Run3\")\n",
     "\n",
-    "test.save_CNN('test save file3')\n",
+    "test.save_CNN('2018_11_05 PLL on gold Train 1 2 Test 3')\n",
     "#test.save_CNN('2018_11_05_slow_time_only_test')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 41800 samples, validate on 2200 samples\n",
+      "Epoch 1/8\n",
+      " - 827s - loss: 1.0041 - acc: 0.6008 - top2metric: 0.7847 - top3metric: 0.8801 - val_loss: 0.5405 - val_acc: 0.7845 - val_top2metric: 0.9432 - val_top3metric: 0.9909\n",
+      "Epoch 2/8\n",
+      " - 823s - loss: 0.6234 - acc: 0.7487 - top2metric: 0.9119 - top3metric: 0.9733 - val_loss: 0.5806 - val_acc: 0.7586 - val_top2metric: 0.9077 - val_top3metric: 0.9809\n",
+      "Epoch 3/8\n",
+      " - 823s - loss: 0.5056 - acc: 0.7925 - top2metric: 0.9396 - top3metric: 0.9855 - val_loss: 0.3604 - val_acc: 0.8532 - val_top2metric: 0.9709 - val_top3metric: 0.9968\n",
+      "Epoch 4/8\n",
+      " - 823s - loss: 0.4452 - acc: 0.8199 - top2metric: 0.9542 - top3metric: 0.9896 - val_loss: 0.4368 - val_acc: 0.8336 - val_top2metric: 0.9500 - val_top3metric: 0.9909\n",
+      "Epoch 5/8\n",
+      " - 822s - loss: 0.4187 - acc: 0.8311 - top2metric: 0.9589 - top3metric: 0.9923 - val_loss: 0.3822 - val_acc: 0.8468 - val_top2metric: 0.9655 - val_top3metric: 0.9927\n",
+      "Epoch 6/8\n",
+      " - 823s - loss: 0.4135 - acc: 0.8367 - top2metric: 0.9604 - top3metric: 0.9925 - val_loss: 0.3068 - val_acc: 0.8736 - val_top2metric: 0.9764 - val_top3metric: 0.9995\n",
+      "Epoch 7/8\n",
+      " - 823s - loss: 0.3650 - acc: 0.8541 - top2metric: 0.9691 - top3metric: 0.9950 - val_loss: 0.2870 - val_acc: 0.8773 - val_top2metric: 0.9782 - val_top3metric: 0.9995\n",
+      "Epoch 8/8\n",
+      " - 823s - loss: 0.3704 - acc: 0.8559 - top2metric: 0.9691 - top3metric: 0.9945 - val_loss: 0.3293 - val_acc: 0.8645 - val_top2metric: 0.9782 - val_top3metric: 0.9982\n",
+      "22000/22000 [==============================] - 210s 10ms/step\n",
+      "model scored 87.209% on G:/2018_11_02 PLL on gold/tip8/mono/Run1\n",
+      "one_diff_error = 8.9\n",
+      "two_diff_error = 3.53\n",
+      "three_diff_error = 0.21\n",
+      "which taus failed were: [1.350e+02 4.800e+01 1.463e+03 6.650e+02 2.320e+02 6.100e+01 1.650e+02\n",
+      " 1.000e+00 4.400e+01 0.000e+00 0.000e+00]\n",
+      " \n",
+      "22000/22000 [==============================] - 214s 10ms/step\n",
+      "model scored 90.768% on G:/2018_11_02 PLL on gold/tip8/mono/Run2\n",
+      "one_diff_error = 4.75\n",
+      "two_diff_error = 3.85\n",
+      "three_diff_error = 0.5700000000000001\n",
+      "which taus failed were: [146. 191. 808. 130. 302. 341.  99.  12.   0.   2.   0.]\n",
+      " \n",
+      "22000/22000 [==============================] - 214s 10ms/step\n",
+      "model scored 60.986% on G:/2018_11_02 PLL on gold/tip8/mono/Run3\n",
+      "one_diff_error = 18.35\n",
+      "two_diff_error = 9.370000000000001\n",
+      "three_diff_error = 9.8\n",
+      "which taus failed were: [1989. 2000. 2000.  410.  587.  179. 1127.  280.    7.    4.    0.]\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "#load and prep training data\n",
+    "test = CNN_train()\n",
+    "\n",
+    "train_data = test.load_experimental_train_data(\"G:/2018_11_02 PLL on gold/tip8/mono/Run1\",\n",
+    "                                              \"G:/2018_11_02 PLL on gold/tip8/mono/Run2\")\n",
+    "\n",
+    "train_x1, train_y = test.preprocess_train_data(train_data)\n",
+    "\n",
+    "model = test.train_CNN(train_x1,train_y, num_epochs = 8, kernel1_size = 400, kernel2_size = 100, num_filter1 = 5, num_filter2 = 3)\n",
+    "\n",
+    "test.test_experimental_CNN(\"G:/2018_11_02 PLL on gold/tip8/mono/Run1\",\n",
+    "                          \"G:/2018_11_02 PLL on gold/tip8/mono/Run2\",\n",
+    "                          \"G:/2018_11_02 PLL on gold/tip8/mono/Run3\")\n",
+    "\n",
+    "test.save_CNN('2018_11_05 PLL on gold Train 1 2 Test 3 Epochs 8')\n",
+    "#test.save_CNN('2018_11_05_slow_time_only_test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 20900 samples, validate on 1100 samples\n",
+      "Epoch 1/10\n",
+      " - 420s - loss: 1.3308 - acc: 0.4620 - top2metric: 0.6162 - top3metric: 0.7167 - val_loss: 0.9248 - val_acc: 0.5936 - val_top2metric: 0.7564 - val_top3metric: 0.8691\n",
+      "Epoch 2/10\n",
+      " - 417s - loss: 0.9114 - acc: 0.6053 - top2metric: 0.7771 - top3metric: 0.8742 - val_loss: 0.8066 - val_acc: 0.6518 - val_top2metric: 0.8173 - val_top3metric: 0.9036\n",
+      "Epoch 3/10\n",
+      " - 417s - loss: 0.7730 - acc: 0.6645 - top2metric: 0.8298 - top3metric: 0.9147 - val_loss: 0.6827 - val_acc: 0.7036 - val_top2metric: 0.8709 - val_top3metric: 0.9455\n",
+      "Epoch 4/10\n",
+      " - 417s - loss: 0.6965 - acc: 0.6968 - top2metric: 0.8578 - top3metric: 0.9356 - val_loss: 0.6180 - val_acc: 0.7200 - val_top2metric: 0.8809 - val_top3metric: 0.9482\n",
+      "Epoch 5/10\n",
+      " - 417s - loss: 0.6353 - acc: 0.7229 - top2metric: 0.8822 - top3metric: 0.9532 - val_loss: 0.5829 - val_acc: 0.7500 - val_top2metric: 0.9109 - val_top3metric: 0.9682\n",
+      "Epoch 6/10\n",
+      " - 417s - loss: 0.6093 - acc: 0.7350 - top2metric: 0.8928 - top3metric: 0.9588 - val_loss: 0.5908 - val_acc: 0.7400 - val_top2metric: 0.9100 - val_top3metric: 0.9618\n",
+      "Epoch 7/10\n",
+      " - 417s - loss: 0.5784 - acc: 0.7458 - top2metric: 0.9016 - top3metric: 0.9644 - val_loss: 0.5590 - val_acc: 0.7600 - val_top2metric: 0.8982 - val_top3metric: 0.9736\n",
+      "Epoch 8/10\n",
+      " - 417s - loss: 0.5177 - acc: 0.7716 - top2metric: 0.9172 - top3metric: 0.9765 - val_loss: 0.5465 - val_acc: 0.7555 - val_top2metric: 0.8964 - val_top3metric: 0.9691\n",
+      "Epoch 9/10\n",
+      " - 417s - loss: 0.5068 - acc: 0.7786 - top2metric: 0.9218 - top3metric: 0.9782 - val_loss: 0.5441 - val_acc: 0.7673 - val_top2metric: 0.9273 - val_top3metric: 0.9764\n",
+      "Epoch 10/10\n",
+      " - 417s - loss: 0.4759 - acc: 0.7887 - top2metric: 0.9304 - top3metric: 0.9809 - val_loss: 0.5972 - val_acc: 0.7445 - val_top2metric: 0.9100 - val_top3metric: 0.9709\n",
+      "22000/22000 [==============================] - 213s 10ms/step\n",
+      "model scored 82.40899999999999% on G:/2018_11_02 PLL on gold/tip8/mono/Run10\n",
+      "one_diff_error = 15.52\n",
+      "two_diff_error = 1.9300000000000002\n",
+      "three_diff_error = 0.06\n",
+      "which taus failed were: [8.37e+02 1.39e+03 4.24e+02 6.70e+02 1.14e+02 2.68e+02 1.54e+02 8.00e+00\n",
+      " 1.00e+00 4.00e+00 0.00e+00]\n",
+      " \n",
+      "22000/22000 [==============================] - 213s 10ms/step\n",
+      "model scored 40.164% on G:/2018_11_02 PLL on gold/tip8/mono/retune/Run1\n",
+      "one_diff_error = 19.28\n",
+      "two_diff_error = 10.97\n",
+      "three_diff_error = 8.06\n",
+      "which taus failed were: [1582. 2000. 2000. 2000. 2000. 1872.    4. 1051.  279.  376.    0.]\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "#load and prep training data\n",
+    "test = CNN_train()\n",
+    "\n",
+    "train_data = test.load_experimental_train_data(\"G:/2018_11_02 PLL on gold/tip8/mono/Run10\")\n",
+    "\n",
+    "train_x1, train_y = test.preprocess_train_data(train_data)\n",
+    "\n",
+    "model = test.train_CNN(train_x1,train_y, num_epochs = 10, kernel1_size = 400, kernel2_size = 100, num_filter1 = 5, num_filter2 = 3)\n",
+    "\n",
+    "test.test_experimental_CNN(\"G:/2018_11_02 PLL on gold/tip8/mono/Run10\",\n",
+    "                           \"G:/2018_11_02 PLL on gold/tip8/mono/retune/Run1\")\n",
+    "\n",
+    "test.save_CNN('2018_11_05 PLL on gold RETUNE Train 10 Test retune Epochs 10')\n",
+    "#test.save_CNN('2018_11_05_slow_time_only_test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
