Note RE: validation data.  Moving forward I should reprogram the preprocessing to prevent data leakage and create a validation split before preprocessing.  Init shuffle for split with same random seed too to make repeatable

--- a/tr-EFM neural network jupyter.ipynb
+++ b/tr-EFM neural network jupyter.ipynb
@@ -738,7 +738,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 41800 samples, validate on 2200 samples\n",
+      "Epoch 1/10\n"
+     ]
+    }
+   ],
    "source": [
     "#load and prep training data\n",
     "test = CNN()\n",
