implemented random_state = 7 for shuffling of training data

--- a/tr-EFM neural network jupyter.ipynb
+++ b/tr-EFM neural network jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
     "        #shuffle the training data. while keras will shuffle the data during each training epoch, the validation_split = x\n",
     "        #will only select the last x fraction of the unshuffled data.  Given I load data sequentially, this means it only\n",
     "        #loads one tau.  Shuffling makes the validation set a true representation of the data instead.\n",
-    "        train_data = sklearn.utils.shuffle(train_data)\n",
+    "        train_data = sklearn.utils.shuffle(train_data, random_state = 7)\n",
     "        \n",
     "        \n",
     "        num_samples = len(train_data)\n",
