--- a/tr-EFM neural network jupyter.ipynb
+++ b/tr-EFM neural network jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,48 @@
      "output_type": "stream",
      "text": [
       "Train on 41800 samples, validate on 2200 samples\n",
-      "Epoch 1/10\n"
+      "Epoch 1/10\n",
+      " - 815s - loss: 1.0435 - acc: 0.5759 - top2metric: 0.7524 - top3metric: 0.8564 - val_loss: 0.5935 - val_acc: 0.7405 - val_top2metric: 0.8809 - val_top3metric: 0.9773\n",
+      "Epoch 2/10\n",
+      " - 814s - loss: 0.6146 - acc: 0.7351 - top2metric: 0.8954 - top3metric: 0.9701 - val_loss: 0.4311 - val_acc: 0.8145 - val_top2metric: 0.9432 - val_top3metric: 0.9918\n",
+      "Epoch 3/10\n",
+      " - 814s - loss: 0.5138 - acc: 0.7770 - top2metric: 0.9225 - top3metric: 0.9842 - val_loss: 0.4228 - val_acc: 0.8041 - val_top2metric: 0.9291 - val_top3metric: 0.9845\n",
+      "Epoch 4/10\n",
+      " - 814s - loss: 0.4617 - acc: 0.7934 - top2metric: 0.9344 - top3metric: 0.9889 - val_loss: 0.4088 - val_acc: 0.8091 - val_top2metric: 0.9441 - val_top3metric: 0.9895\n",
+      "Epoch 5/10\n",
+      " - 814s - loss: 0.4230 - acc: 0.8132 - top2metric: 0.9415 - top3metric: 0.9908 - val_loss: 0.3985 - val_acc: 0.8277 - val_top2metric: 0.9468 - val_top3metric: 0.9959\n",
+      "Epoch 6/10\n",
+      " - 814s - loss: 0.4132 - acc: 0.8200 - top2metric: 0.9445 - top3metric: 0.9925 - val_loss: 0.4462 - val_acc: 0.8027 - val_top2metric: 0.9309 - val_top3metric: 0.9886\n",
+      "Epoch 7/10\n",
+      " - 815s - loss: 0.3999 - acc: 0.8254 - top2metric: 0.9498 - top3metric: 0.9937 - val_loss: 0.3307 - val_acc: 0.8559 - val_top2metric: 0.9636 - val_top3metric: 1.0000\n",
+      "Epoch 8/10\n",
+      " - 814s - loss: 0.3787 - acc: 0.8331 - top2metric: 0.9523 - top3metric: 0.9945 - val_loss: 0.3469 - val_acc: 0.8491 - val_top2metric: 0.9618 - val_top3metric: 0.9982\n",
+      "Epoch 9/10\n",
+      " - 814s - loss: 0.3577 - acc: 0.8391 - top2metric: 0.9571 - top3metric: 0.9954 - val_loss: 0.3224 - val_acc: 0.8609 - val_top2metric: 0.9677 - val_top3metric: 0.9991\n",
+      "Epoch 10/10\n",
+      " - 814s - loss: 0.3657 - acc: 0.8409 - top2metric: 0.9572 - top3metric: 0.9952 - val_loss: 0.3406 - val_acc: 0.8477 - val_top2metric: 0.9641 - val_top3metric: 0.9977\n",
+      "22000/22000 [==============================] - 205s 9ms/step\n",
+      "model scored 93.136% on G:/2018_11_02 PLL on gold/tip8/mono/Run1\n",
+      "one_diff_error = 6.39\n",
+      "two_diff_error = 0.42\n",
+      "three_diff_error = 0.02\n",
+      "which taus failed were: [  5. 739. 478.  65. 165.  33.  17.   6.   2.   0.   0.]\n",
+      " \n",
+      "22000/22000 [==============================] - 204s 9ms/step\n",
+      "model scored 83.641% on G:/2018_11_02 PLL on gold/tip8/mono/Run3\n",
+      "one_diff_error = 11.799999999999999\n",
+      "two_diff_error = 4.54\n",
+      "three_diff_error = 0.0\n",
+      "which taus failed were: [1.28e+02 2.00e+03 9.00e+02 1.40e+01 1.65e+02 2.80e+02 1.05e+02 6.00e+00\n",
+      " 0.00e+00 1.00e+00 0.00e+00]\n",
+      " \n",
+      "22000/22000 [==============================] - 207s 9ms/step\n",
+      "model scored 64.191% on G:/2018_11_02 PLL on gold/tip8/mono/Run2\n",
+      "one_diff_error = 21.41\n",
+      "two_diff_error = 9.9\n",
+      "three_diff_error = 4.31\n",
+      "which taus failed were: [ 952. 1596. 1973.  402. 1156. 1132.  558.   97.    3.    9.    0.]\n",
+      " \n"
      ]
     }
    ],
@@ -765,6 +806,27 @@
     "\n",
     "test.save_CNN('2018_11_02 tip 8 train 1 3 test 2 KL 400 100 epochs 10')\n",
     "#test.save_CNN('2018_11_05_slow_time_only_test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'history'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-a266efbac31d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'history'"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.history)"
    ]
   },
   {
