previous commit was not saved version (jupyter save bug).  Here is actual properly saved commit.

--- a/tr-EFM neural network jupyter.ipynb
+++ b/tr-EFM neural network jupyter.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jakeprecht\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "#Import necessary libraries\n",
     "\n",
@@ -349,7 +359,7 @@
     "        #Train model\n",
     "        #Many tips implementation\n",
     "        #model.fit([train_x1, train_x2], train_y, batch_size=32, epochs=num_epochs,verbose=2, validation_split=0.05)#, callbacks=[tbCallBack])\n",
-    "        model.fit(train_x1, train_y, batch_size=32, epochs=num_epochs,verbose=2, validation_split=0.05)#, callbacks=[tbCallBack])\n",
+    "        history = model.fit(train_x1, train_y, batch_size=32, epochs=num_epochs,verbose=2, validation_split=0.05)#, callbacks=[tbCallBack])\n",
     "        self.model = model #save model to self for calling from other functions later\n",
     "        \n",
     "        \n",
@@ -359,7 +369,7 @@
     "        #self.branch1 = branch1\n",
     "        #self.branch2 = branch2\n",
     "        #self.model = model\n",
-    "        return\n",
+    "        return history\n",
     "    \n",
     "    def load_simulated_test_data(self, file_path):#, test_fraction):\n",
     "        \"\"\"input string with file path (e.g. \"D:/jake/DDHO Data/inst_freq/25us/0pt1noise/*.npy\" )\n",
@@ -722,10 +732,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 41800 samples, validate on 2200 samples\n",
+      "Epoch 1/2\n",
+      " - 803s - loss: 1.1552 - acc: 0.5378 - top2metric: 0.6979 - top3metric: 0.8016 - val_loss: 0.7500 - val_acc: 0.6736 - val_top2metric: 0.8423 - val_top3metric: 0.9382\n",
+      "Epoch 2/2\n",
+      " - 804s - loss: 0.7270 - acc: 0.6891 - top2metric: 0.8605 - top3metric: 0.9516 - val_loss: 0.5939 - val_acc: 0.7350 - val_top2metric: 0.9036 - val_top3metric: 0.9841\n"
+     ]
+    }
+   ],
+   "source": [
+    "#load and prep training data\n",
+    "test = CNN()\n",
+    "\n",
+    "train_data = test.load_experimental_train_data(\"G:/2018_11_02 PLL on gold/tip8/mono/Run1\",\n",
+    "                                              \"G:/2018_11_02 PLL on gold/tip8/mono/Run3\")\n",
+    "\n",
+    "train_x1, train_y = test.preprocess_train_data(train_data)\n",
+    "\n",
+    "model = test.train_CNN(train_x1,train_y, num_epochs = 2, kernel1_size = 400, kernel2_size = 100, num_filter1 = 5, num_filter2 = 3)\n",
+    "\n",
+    "#test.test_experimental_CNN(\"G:/2018_11_02 PLL on gold/tip8/mono/Run1\",\n",
+    "                          #\"G:/2018_11_02 PLL on gold/tip8/mono/Run3\",\n",
+    "                          #\"G:/2018_11_02 PLL on gold/tip8/mono/Run2\")\n",
+    "\n",
+    "#test.save_CNN('2018_11_02 tip 8 train 1 3 test 2 KL 400 100 epochs 1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'acc': [0.5377751196172249, 0.6890909090909091],\n",
+       " 'loss': [1.1552492255343205, 0.7270494104230233],\n",
+       " 'top2metric': [0.6978708133971292, 0.8604784688995215],\n",
+       " 'top3metric': [0.801555023923445, 0.9516028708133971],\n",
+       " 'val_acc': [0.6736363634196195, 0.7350000002167442],\n",
+       " 'val_loss': [0.7500070355155252, 0.5939086174964905],\n",
+       " 'val_top2metric': [0.8422727272727273, 0.9036363638531077],\n",
+       " 'val_top3metric': [0.9381818181818182, 0.9840909090909091]}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.history"
+   ]
   },
   {
    "cell_type": "code",
