--- a/tr-EFM neural network jupyter.ipynb
+++ b/tr-EFM neural network jupyter.ipynb
@@ -40,7 +40,7 @@
     "    bottom of this notebook, and should still be functional with minimal changes needed.\n",
     "    \n",
     "    Note that there are currently several blocks of code commented out with the comment \"#many tips implementation\".\n",
-    "    These blocks of code are for a feature I am currently developing that makes the neural network tip-agnostic.\n",
+    "    These blocks of code are for a feature I am developing that makes the neural network tip-agnostic.\n",
     "    Currently the neural network needs to be trained on the same AFM tip the experiment is ran on.\n",
     "    The #many tips implementation would eliminate this requirement by training the neural net on MANY different tips\n",
     "    with different tip states.  Then, before starting a neural net experiment, one needs to only measure the tip parameters\n",
@@ -84,7 +84,7 @@
     "        \n",
     "        \n",
     "        Outputs:\n",
-    "        df_main = a Pandas DataFrame containing all of the z(t) data \n",
+    "        df_main = a Pandas DataFrame containing all of the z(t) data and Tau\n",
     "        #as well as k, Q, omega, and Tau for each point scan #many tips implementation\n",
     "        \"\"\"\n",
     "        \n",
