--- a/tr-EFM neural network jupyter.ipynb
+++ b/tr-EFM neural network jupyter.ipynb
@@ -88,7 +88,10 @@
     "        #as well as k, Q, omega, and Tau for each point scan #many tips implementation\n",
     "        \"\"\"\n",
     "        \n",
-    "        #taus array gives the values of tau for each Runx.  They need to be in ascending order (i.e. taus[0] = tau for Run0, taus[1] = tau for Run1, etc.)  The requirement for inputting ascending order can easily be fixed by a sort function but Taus is not a parameter I have ever changed yet\n",
+    "        #taus array gives the values of tau for each Runx.  They need to be in ascending order \n",
+    "        #(i.e. taus[0] = tau for Run0, taus[1] = tau for Run1, etc.)  \n",
+    "        #The requirement for inputting ascending order can easily be fixed by a sort function \n",
+    "        #but Taus is not a parameter I have ever changed yet so I haven't bothered with this\n",
     "        taus= np.array([10e-9, 31.62e-9, 100e-9, 316.2e-9, 1e-6, 3.162e-6, 10e-6, 31.62e-6, 100e-6, 316.2e-6, 1e-3])\n",
     "        \n",
     "        #Pre-calculate important indices\n",
@@ -114,7 +117,8 @@
     "            df_run = pd.DataFrame()\n",
     "            \n",
     "            #Loop through every tau in that run and load it in\n",
-    "            for j in range(0,len(tau_paths)): #CHANGE THIS RANGE IF YOU WANT TO TRAIN ON DIFFERENT TIME SCALES.  CURRENTLY IS TRAINING ON ALL TIME SCALES\n",
+    "            for j in range(0,len(tau_paths)): #CHANGE THIS RANGE IF YOU WANT TO TRAIN ON DIFFERENT TIME SCALES.  \n",
+    "                                              #CURRENTLY IS TRAINING ON ALL TIME SCALES\n",
     "                tau = taus[j]\n",
     "                displacement_path = glob.glob(sorted_tau_paths[j]+\"/*\")\n",
     "            \n",
@@ -148,7 +152,8 @@
     "                    df_temp['omega'] = self.omega\"\"\"\n",
     "                    \n",
     "                    df_temp['Tau'] = pd.Series(index=df_temp.index) #create Tau column\n",
-    "                    df_temp['Tau'] = tau #assign tau value to tau column (could probably be done in above step with data=tau flag?)\n",
+    "                    df_temp['Tau'] = tau #assign tau value to tau column \n",
+    "                                         #(could probably be done in above step with data=tau flag?)\n",
     "                    \n",
     "                    df_run = df_run.append(df_temp,ignore_index=True) #append each tau value to this run          \n",
     "            \n",
@@ -159,13 +164,16 @@
     "        \n",
     "    \n",
     "    def preprocess_train_data(self,train_data, val_split = 0.2):\n",
-    "        \"\"\"This function takes the raw training data (simulated or experimental) and prepares it for the machine learning input\n",
-    "        It normalizes the data about zero\n",
-    "        It also separates training and validation data and preprocesses them separately (training data first, then validation data with training data's settings to prevent data leakage)\n",
+    "        \"\"\"This function takes the raw training data (simulated or experimental) and prepares it \n",
+    "        for the machine learning input.\n",
+    "        It normalizes the data about zero.\n",
+    "        It also separates training and validation data and preprocesses them separately \n",
+    "        (training data first, then validation data with training data's settings to prevent data leakage).\n",
     "        \n",
     "        Inputs: \n",
     "        train_data = raw training data from load_experimental_train_data() or load_simulated_train_data()\n",
-    "        val_split = \n",
+    "        val_split = fraction of input training data to randomly select and split off as validation data\n",
+    "                    default val_split = 0.2\n",
     "        \n",
     "        Outputs:\n",
     "        train_x1_norm_reshaped = training x data (everything except the known, true Tau value)\n",
@@ -191,20 +199,25 @@
     "        \n",
     "        #train_x2 = train_x[['k','Q','omega']] #Many tips implementation\n",
     "        \n",
-    "        self.mean_train_x1 = np.mean(train_x1) #saving the mean_train_x for preprocessing the validation/test data in the same manner as our training dat\n",
+    "        self.mean_train_x1 = np.mean(train_x1) #saving the mean_train_x for preprocessing the \n",
+    "                                               #validation/test data in the same manner as our training data\n",
     "        #self.mean_train_x2 = np.mean(train_x2) #Many tips implementation\n",
     "        \n",
-    "        self.SD_train_x1 = np.std(train_x1) #saving the SD_train_x for preprocessing the validation/test data in the same manner as our training data\n",
+    "        self.SD_train_x1 = np.std(train_x1) #saving the SD_train_x for preprocessing the validation/test data \n",
+    "                                            #in the same manner as our training data\n",
     "        #self.SD_train_x2 = np.std(train_x2) #Many tips implementation\n",
     "        \n",
-    "        train_x1_norm = (train_x1 - self.mean_train_x1) /  (self.SD_train_x1) #normalize and centralize the training data for best neural network performance\n",
+    "        #normalize and centralize the training data for best neural network performance\n",
+    "        train_x1_norm = (train_x1 - self.mean_train_x1) /  (self.SD_train_x1) \n",
     "        train_x1_norm_reshaped = np.expand_dims(train_x1_norm,axis=2) #formatting for input into CNN\n",
     "        \n",
-    "        val_x1_norm = (val_x1 - self.mean_train_x1) /  (self.SD_train_x1) #normalize and centralize the training data for best neural network performance\n",
+    "        #normalize and centralize the training data for best neural network performance\n",
+    "        val_x1_norm = (val_x1 - self.mean_train_x1) /  (self.SD_train_x1) \n",
     "        val_x1_norm_reshaped = np.expand_dims(val_x1_norm,axis=2) #formatting for input into CNN\n",
     "        \n",
     "        #Many tips implementation\n",
-    "        #train_x2_norm = (train_x2 - self.mean_train_x2) /  (self.SD_train_x2) #normalize and centralize the training data for best neural network performance\n",
+    "        #normalize and centralize the training data for best neural network performance\n",
+    "        #train_x2_norm = (train_x2 - self.mean_train_x2) /  (self.SD_train_x2) \n",
     "        #train_x2_norm_reshaped = np.expand_dims(train_x2_norm,axis=2) #formatting for input into CNN\n",
     "        \n",
     "\n",
@@ -226,13 +239,35 @@
     "\n",
     "        self.number_of_classes = one_hot_tau_train.shape[1] #used to match number of output Softmax layers in my NN\n",
     "        \n",
-    "        return train_x1_norm_reshaped, one_hot_tau_train, val_x1_norm_reshaped, one_hot_tau_val #train_x2_norm_reshaped, one_hot_tau\n",
+    "        return train_x1_norm_reshaped, one_hot_tau_train, val_x1_norm_reshaped, one_hot_tau_val #,\n",
+    "               # train_x2_norm_reshaped\n",
     "    \n",
     "    \n",
     "    #Many tips implementation\n",
-    "    #def train_CNN(self, train_x1, train_x2, train_y, num_epochs = 40, kernel1_size = 400, kernel2_size = 100, num_filter1 = 5, num_filter2 = 3):\n",
-    "    def train_CNN(self, train_x1, train_y, val_x, val_y, num_epochs = 20, kernel1_size = 400, kernel2_size = 100, num_filter1 = 5, num_filter2 = 3):\n",
-    "        #Build CNN and start training!\n",
+    "    #def train_CNN(self, train_x1, train_x2, train_y, num_epochs = 40, kernel1_size = 400, \n",
+    "    #kernel2_size = 100, num_filter1 = 5, num_filter2 = 3):\n",
+    "    \n",
+    "    def train_CNN(self, train_x1, train_y, val_x, val_y, num_epochs = 20, kernel1_size = 400, \n",
+    "                  kernel2_size = 100, num_filter1 = 5, num_filter2 = 3):\n",
+    "        \"\"\"Build CNN and start training!\n",
+    "        \n",
+    "        Inputs:\n",
+    "        train_x1 = training data (train_x1_norm_reshaped output from preprocess_train_data())\n",
+    "        train_y = taus from training data (one_hot_tau_train from preprocess_train_data())\n",
+    "        val_x = validation data (val_x1_norm_reshaped output from preprocess_train_data())\n",
+    "        val_y = taus from training data (one_hot_tau_val from preprocess_train_data())\n",
+    "        num_epochs = number of epochs to train for\n",
+    "        kernel1_size = kernel length for first convolutional layer [int]\n",
+    "        kernel2_size = kernel length for second convolutional layer [int]\n",
+    "        num_filter1 = number of convolutional filters in first convolutional layer [int]\n",
+    "        num_filter2 = number of convolutional filters in second convolutional layer [int]\n",
+    "        \n",
+    "        Outputs:\n",
+    "        history = dictionary of model fitting metrics (accuracy, top2metric, etc.)\n",
+    "        \n",
+    "        Note that several other important variables from this function are not returned as function outputs,\n",
+    "        but ARE saved as class variables for reuse later (e.g. self.model)\n",
+    "        \"\"\"\n",
     "\n",
     "        #Save class variables for later use in visualize_weights()\n",
     "        self.filter_number1 = num_filter1\n",
@@ -349,8 +384,9 @@
     "    \n",
     "    def plot_training_statistics(self, history):\n",
     "        \"\"\"Plot training data accuracy and validation data accuracy as a function of training epoch number\n",
+    "        \n",
     "        Inputs: history (dictionary of model fitting metrics--it is the output variable from train_CNN())\n",
-    "        Outputs: inline figure of training accuracy vs validation accuracy\"\"\"\n",
+    "        Outputs: inline figure showing training vs. validation metrics of loss, accuracy, and Top2metric \"\"\"\n",
     "        \n",
     "        num_epochs = self.num_epochs\n",
     "\n",
@@ -368,11 +404,13 @@
     "        x = range(1,self.num_epochs + 1)\n",
     "        xticks = range(1,self.num_epochs + 1)\n",
     "\n",
+    "        #Set up plotting\n",
     "        fig, (ax1, ax2, ax3) = plt.subplots(nrows = 3)\n",
     "\n",
     "        ax1.plot(x, train_loss, label = 'Training')\n",
     "        ax1.plot(x, val_loss, label = 'Validation')\n",
     "        ax1.legend(loc = 'upper right')\n",
+    "        #below if/else statement is to keep the x-axis formatted nicely regardless of number of epochs\n",
     "        if self.num_epochs < 6:\n",
     "            ax1.set_xticks(xticks)\n",
     "        else:\n",
@@ -383,6 +421,7 @@
     "        ax2.plot(x, train_acc, label = 'Training')\n",
     "        ax2.plot(x, val_acc, label = 'Validation')\n",
     "        ax2.legend(loc = 'lower right')\n",
+    "        #below if/else statement is to keep the x-axis formatted nicely regardless of number of epochs\n",
     "        if self.num_epochs < 6:\n",
     "            ax2.set_xticks(xticks)\n",
     "        else:\n",
@@ -395,6 +434,7 @@
     "        ax3.plot(x, train_top_2, label = 'Training')\n",
     "        ax3.plot(x, val_top_2, label = 'Validation')\n",
     "        ax3.legend(loc = 'lower right')\n",
+    "        #below if/else statement is to keep the x-axis formatted nicely regardless of number of epochs\n",
     "        if self.num_epochs < 6:\n",
     "            ax3.set_xticks(xticks)\n",
     "        else:\n",
@@ -413,13 +453,24 @@
     "    \n",
     "    \n",
     "    def load_experimental_test_data(self, path):\n",
-    "        \"\"\"input string with file path\n",
+    "        \"\"\"This function loads test data and preprocesses it in the same way as the training data.\n",
+    "        Note that the preprocessing uses parameters from the training data on the test data to prevent data leakage.\n",
+    "        \n",
+    "        Inputs:\n",
+    "        path = string to file path folder.  Please see documentation load_experimental_train_data() for important\n",
+    "                                            notes about this variable!\n",
+    "                                            \n",
     "    \n",
-    "        outputs the requested percentage of the data (test_data_norm_reshaped) and their corresponding labels for evaluation (one_hot_tau)\n",
-    "        these outputs are basically test_x and test_y that are formatted to be fed into model.evaluate()\n",
+    "        Outputs:\n",
+    "        test_x1_norm_reshaped = preprocessed test x data ready for evaluation\n",
+    "        one_hot_tau = test y data's corresponding one hot labels\n",
+    "        \n",
+    "        The outputs are properly formatted to be fed into model.evaluate()\n",
     "    \n",
-    "        NOTE this function requires training functions to have been run (mean_train_x and SD_train_x must exist!!!)\n",
-    "        ^^^This means for production, mean_train_x and SD_train_x must be saved variables that I import along with my trained NN\"\"\"\n",
+    "        JAKE NOTE this function requires training functions to have been run (mean_train_x and SD_train_x must exist!!!)\n",
+    "        This means for production, mean_train_x and SD_train_x must be saved variables \n",
+    "        that I import along with my trained NN\"\"\"\n",
+    "        \n",
     "        #taus = np.array([10e-9, 25e-9, 50e-9, 100e-9, 250e-9, 500e-9,\n",
     "        #                        1e-6, 5e-6, 10e-6, 100e-6, 1e-3])\n",
     "        taus= np.array([10e-9, 31.62e-9, 100e-9, 316.2e-9, 1e-6, 3.162e-6, 10e-6, 31.62e-6, 100e-6, 316.2e-6, 1e-3])\n",
